--- a/contact.html
+++ b/contact.html
@@ -82,8 +82,14 @@
     <section class="contact-section container-fluid" id="contact-me">
 
       <div class="container-fluid">
-        <h2>I'd love to hear from you.</h2>
-        <br>
+        <div class="row">
+          <div class="col-lg-12">
+            <h2>I'd love to hear from you.</h2>
+            <br>
+          </div>
+
+        </div>
+
 
         <div class="row">
           <div class="col-lg-6 contact-left">
